# matey

./: Cargo.toml  README.md  perf.data  perf.data.old  t1.fmt
output/: "colors.conf"  colors.scss  t1.out
src/: args.rs  cache.rs  error.rs  lib.rs  main.rs  material_newtype.rs
src/parser/: common.rs  config.rs  mod.rs  parser.rs  template.rs  tokenizer.rs
src/parser/template/: indexable.rs  mod.rs  template.rs
src/parsers/: common.rs  config.rs  mod.rs  parser.rs  tokenizer.rs
src/parsers/templates/: indexable.rs  mod.rs  template.rs
