[package]
name = "matty"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.22.0", features = ["avx512_simd", "derive"] }
material-colors = { version = "=0.4.2", features = ["image", "serde"] }
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"

[profile.release-with-debug]
inherits = "release"
debug = true
